force-app/main/default/objects/EC_Order__c/EC_Order__c.object-meta.xml
<CustomObject>
    <label>注文(カスタム)</label>
    <nameField>
        <displayFormat>ORD-{0000000}</displayFormat>
        <label>注文番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>注文</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>