force-app/main/default/objects/EC_Order__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先責任者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>注文</relationshipLabel>
    <relationshipName>OrderContacts_EC_Order</relationshipName>
    <type>Lookup</type>
</CustomField>