force-app/main/default/objects/EC_Order__c/fields/OrderDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDate__c</fullName>
    <label>注文日</label>
    <type>Date</type>
</CustomField>