force-app/main/default/objects/EC_Order__c/fields/OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderStatus__c</fullName>
    <label>注文ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>注文済み</fullName>
            </value>
            <value>
                <fullName>出荷準備中</fullName>
            </value>
            <value>
                <fullName>発送済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>