force-app/main/default/objects/EC_Order__c/listViews/AdminTestList.listView-meta.xml
<ListView>
    <fullName>AdminTestList</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>ProductName__c</columns>
    <columns>OrderStatus__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>OrderDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>カスタムリストビュー</label>
</ListView>