force-app/main/default/objects/EC_Order__c/listViews/ECOrderList.listView-meta.xml
<ListView>
    <fullName>ECOrderList</fullName>
    <columns>NAME</columns>
    <columns>ProductName__c</columns>
    <columns>OrderStatus__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>OrderDate__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>配送受注商品</label>
</ListView>